[package]
name = "load_runner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
secp256k1 = "0.21"
web3="0.18.0"
tokio={version="1.17", features=["rt","rt-multi-thread","sync"]}
libzeropool = { version = "0.5.3", default-features = false, features = ["in3out127"] }
borsh = "0.9.1"
libzeropool-rs = "0.3.8"
rand = "0.8.4"
serde_json = "1.0.64"
reqwest = "0.11.10"
serde = "1.0.136"
log = "0.4.14"
tracing = { version = "0.1.29", features = ["log"] }
tracing-futures = "0.2.5"
tracing-subscriber = { version = "0.2.12", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.2.6"
tracing-log = "0.1.2"
futures-util = { version = "0.3", default-features = false, features = ["std"] }
lazy_static = "1.4"
opentelemetry = { version="0.17.0", features = ["rt-tokio", "metrics"] }
opentelemetry-jaeger = { version="0.16.0", features = ["rt-tokio"] }
thrift = "0.13"
hex = "0.4.3"
clap = { version = "3.1.12", features = ["derive"] }
prometheus = { version ="0.13.0", features = ["push"]}
futures = "0.3"